<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActivityLayoutRootStyle"
    android:orientation="vertical">

<!--    <RelativeLayout style="@style/PageTitleRootStyle_White">

        <TextView
            android:id="@id/replace_pwd_back"
            style="@style/PageTitleBackBlackStyle" />

        <TextView
            style="@style/PageTitleNameBlackStyle"
            android:text="重置密码" />

        <ImageView
            android:id="@id/replace_pwd_more"
            style="@style/PageTitleImgActionStyle"
            android:scaleType="fitCenter"
            android:src="@mipmap/mine_more" />
    </RelativeLayout>-->

    <include layout="@layout/plug_base_title"/>

    <TextView style="@style/HorizontalDividerLineStyle" />

    <TextView
        style="@style/HorizontalDividerLineStyle"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                style="@style/InputLineNameStyle"
                android:text="手机号码" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_column="1"
                android:orientation="horizontal">


                <EditText
                    android:id="@id/replace_pwd_mobile"
                    style="@style/InputLineContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:hint="@string/login_mobile_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="11" />

                <cn.spinsoft.wdq.widget.VerifyButton
                    android:id="@id/replace_pwd_verify_btn"
                    android:layout_width="95dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </TableRow>

        <TextView style="@style/HorizontalDividerLineStyle" />

        <TableRow>

            <TextView
                style="@style/InputLineNameStyle"
                android:text="验  证  码" />

            <EditText
                android:id="@id/replace_pwd_verify_et"
                style="@style/InputLineContentStyle"
                android:hint="@string/register_verify_hint"
                android:imeOptions="actionNext"
                android:maxLength="6" />
        </TableRow>

        <TextView style="@style/HorizontalDividerLineStyle" />

        <TableRow>

            <TextView
                style="@style/InputLineNameStyle"
                android:text="新  密  码" />

            <EditText
                android:id="@id/replace_pwd_pwd"
                style="@style/InputLineContentStyle"
                android:hint="@string/register_pwd_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />

        </TableRow>

        <TextView style="@style/HorizontalDividerLineStyle" />

       <!-- <TableRow>

            <TextView
                style="@style/InputLineNameStyle"
                android:text="确认密码" />

            <EditText
                android:id="@id/replace_pwd_pwd_2"
                style="@style/InputLineContentStyle"
                android:hint="@string/register_pwd_hint_2"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

        </TableRow>-->

    </TableLayout>

    <TextView style="@style/HorizontalDividerLineStyle" />

    <Button
        android:id="@id/replace_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/login_register_btn_sel"
        android:enabled="false"
        android:text="确认"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_34" />

</LinearLayout>